sort of working code, Can't use child elements in data-table. Need to just use name or only top level fields.

--- a/force-app/main/default/classes/massWebmergeCustomReportsHelper.cls
+++ b/force-app/main/default/classes/massWebmergeCustomReportsHelper.cls
@@ -17,7 +17,7 @@ public with sharing class massWebmergeCustomReportsHelper {
     }
 
     @AuraEnabled
-    public static soqlQueriesWrapper getQueries(){
+    public static soqlQueriesWrapper getQueriesFromStaticResource(){
         StaticResource soqlQueriesStaticResource = [select id,body from StaticResource Where name = 'soqlQueries' LIMIT 1];
         soqlQueriesWrapper soqlQueries = (soqlQueriesWrapper)JSON.deserialize(soqlQueriesStaticResource.body.toString(), soqlQueriesWrapper.class);
         return soqlQueries;    
