Refactored most of the helper apex class.

--- a/force-app/main/default/classes/massWebmergeCustomReportsHelper.cls
+++ b/force-app/main/default/classes/massWebmergeCustomReportsHelper.cls
@@ -12,6 +12,30 @@ public with sharing class massWebmergeCustomReportsHelper {
             
     }
 
+    @AuraEnabled
+    public static map<string,soqlQueryWrapper> getQueriesFromStaticResource(){
+        StaticResource soqlQueriesStaticResource = [select id,body from StaticResource Where name = 'soqlQueries' LIMIT 1];
+        map<string,soqlQueryWrapper> wrappedSoqlQueries = (map<string,soqlQueryWrapper>)JSON.deserialize(soqlQueriesStaticResource.body.toString(), map<string,soqlQueryWrapper>.class);
+        return wrappedSoqlQueries;    
+    }
+
+    @AuraEnabled(cacheable=false)
+    public static void doWebmerge(list<Id> recordIds, string mappingName){
+        webm__webmerge_mapping__c mapping = [SELECT id, webm__Salesforce_Object_Name__c from webm__webmerge_mapping__c where name=:mappingName LIMIT 1];
+        
+        if(mapping == null)
+            return;
+
+        boolean run = webm.WebmergeGenerator.generateDocumentBatchCombined(
+            mapping.id, 
+            recordIds, 
+            mapping.webm__Salesforce_Object_Name__c
+            );
+
+        System.debug(run);
+    }
+
+    //HELPERS
     private static boolean isFilteringRequired(soqlQueryWrapper wrappedSoqlQuery)
     {
         if(String.isEmpty(wrappedSoqlQuery.filterFieldPath) || String.isEmpty(wrappedSoqlQuery.filterValue))
@@ -39,57 +63,49 @@ public with sharing class massWebmergeCustomReportsHelper {
         return database.query(wrappedSoqlQuery.query);
     }
 
-
-    @AuraEnabled
-    public static map<string,soqlQueryWrapper> getQueriesFromStaticResource(){
-        StaticResource soqlQueriesStaticResource = [select id,body from StaticResource Where name = 'soqlQueries' LIMIT 1];
-        map<string,soqlQueryWrapper> soqlQueries = (map<string,soqlQueryWrapper>)JSON.deserialize(soqlQueriesStaticResource.body.toString(), map<string,soqlQueryWrapper>.class);
-        return soqlQueries;    
-    }
-
-    @AuraEnabled(cacheable=false)
-    public static void doWebmerge(list<Id> recordIds, string mappingName){
-        webm__webmerge_mapping__c mapping = [SELECT id, webm__Salesforce_Object_Name__c from webm__webmerge_mapping__c where name=:mappingName LIMIT 1];
-        
-        if(mapping == null)
-            return;
-
-        boolean run = webm.WebmergeGenerator.generateDocumentBatchCombined(
-            mapping.id, 
-            recordIds, 
-            mapping.webm__Salesforce_Object_Name__c
-            );
-
-        System.debug(run);
-    }
-
     /*
         root is the sobject you are trying to filter.
         filterFieldPath is a dot-notated string of the child of root toward the field that you are checking.
         filterValue is the value that must be contained in the field.
         e.g. root_transaction->account->long_text_field filtering 'Deceased'
         root=root_transaction
-        filterFieldPath= 'account__r.long_text_field__c'
-        filterValue= 'Deceased'
+        filterFieldPath='account__r.long_text_field__c'
+        filterValue='Deceased'
     */
     private static boolean filterSobject(sobject root, string filterFieldPath, string filterValue)
     {
+        List<string> orderedListOfDescendents = filterFieldPath.split('\\.');
+        String fieldAtBaseOFDescendentObjects = orderedListOfDescendents.get(orderedListOfDescendents.size() - 1);
 
-        List<string> filterFieldSplit = filterFieldPath.split('\\.');
-        String filterField = filterFieldSplit.get(filterFieldSplit.size() - 1);
+        sobject baseSobject = retriveBaseObject(root, orderedListOfDescendents, fieldAtBaseOFDescendentObjects);
 
-        sobject parent = root;
+        return objectContainsFieldValue(baseSobject, fieldAtBaseOFDescendentObjects, filterValue);
+    }
 
-        for(string filterFieldParent : filterFieldSplit )
+    private static sobject retriveBaseObject(Sobject root, list<string> orderedListOfDescendents, string fieldAtBaseOFDescendentObjects)
+    {
+        sobject currentOjbect = root;
+
+        for(string currentPosition : orderedListOfDescendents )
         {
-            if(filterFieldParent == filterField)
+            if(currentPosition == fieldAtBaseOFDescendentObjects)
             {
                 break;
             }
-            parent = parent.getSobject(filterFieldParent);
+            currentOjbect = stepDownToChild(currentPosition, currentOjbect);
         }
 
-        return ((string) parent.get(filterField)).contains(filterValue);
+        return currentOjbect;
+    }
+
+    private static sobject stepDownToChild(string childFieldName, sobject parent)
+    {
+        return parent.getSobject(childFieldName);
+    }
+
+    private static boolean objectContainsFieldValue(sobject baseObject, string field, string value)
+    {
+        return ((string) baseObject.get(field)).contains(value);
     }
 }
 
