Ignoring case on filter. May make this optional.

--- a/force-app/main/default/classes/massWebmergeCustomReportsHelper.cls
+++ b/force-app/main/default/classes/massWebmergeCustomReportsHelper.cls
@@ -138,7 +138,7 @@ public with sharing class massWebmergeCustomReportsHelper {
         string fieldValue = (string) baseObject.get(field);
         if(fieldValue != null)
         {
-            return fieldValue.contains(testValue);
+            return fieldValue.containsIgnoreCase(testValue);
         }else 
         {
             return false;
