Fixing a syntax error in my code.

--- a/force-app/main/default/classes/massWebmergeCustomReportsHelperTest.cls
+++ b/force-app/main/default/classes/massWebmergeCustomReportsHelperTest.cls
@@ -1,6 +1,6 @@
 @isTest
 public class massWebmergeCustomReportsHelperTest {
-	private static final NUMBEROFUSERS = 5;
+	private static final integer NUMBEROFUSERS = 5;
     @TestSetup
     static void setup()
     {
